# mfiler4

./: .gitignore  AUTHORS  CHANGELOG  LICENSE  Makefile.in  README  README.ja  USAGE.ja.txt  USAGE.txt  command.cpp  configure  configure.in  mfiler4.xyzsh
man/man1/: mfiler4.1
src/: commands.c  common.h  config.h  config.h.in  dir.c  file.c  filer.c  filer.h  gui.c  isearch.c  isearch.c.bak  main.c  mattr.c  menu.c  termbuf.c
